--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,11 +1,23 @@
 server {
     listen 80;
+    
+    # Increase header buffer size
+    large_client_header_buffers 4 32k;
+    client_header_buffer_size 32k;
+    
+    # Increase max body size
+    client_max_body_size 50M;
 
     root /usr/share/nginx/html;
     index index.html;
 
     location / {
         try_files $uri /index.html;
+        
+        # Add CORS headers
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
     }
 
     # Optional: Cache-Control for static assets
