--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,11 +26,13 @@
 		"react": "^18.3.1",
 		"react-beautiful-dnd": "^13.1.1",
 		"react-circular-progressbar": "^2.2.0",
+		"react-confetti": "^6.4.0",
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.55.0",
 		"react-icons": "^5.3.0",
 		"react-router-dom": "^6.30.0",
 		"react-toastify": "^11.0.5",
+		"react-use": "^17.6.0",
 		"tailwindcss": "^3.4.14"
 	},
 	"devDependencies": {
