--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,13 +16,11 @@
 		"@mantine/hooks": "^7.17.3",
 		"@tabler/icons-react": "^3.31.0",
 		"@types/react-beautiful-dnd": "^13.1.8",
-		"autoprefixer": "^10.4.20",
 		"axios": "^1.8.4",
 		"formik": "^2.4.6",
 		"framer-motion": "^12.9.2",
 		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.503.0",
-		"postcss": "^8.4.47",
 		"react": "^18.3.1",
 		"react-beautiful-dnd": "^13.1.1",
 		"react-circular-progressbar": "^2.2.0",
@@ -32,8 +30,7 @@
 		"react-icons": "^5.3.0",
 		"react-router-dom": "^6.30.0",
 		"react-toastify": "^11.0.5",
-		"react-use": "^17.6.0",
-		"tailwindcss": "^3.4.14"
+		"react-use": "^17.6.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.13.0",
@@ -41,12 +38,15 @@
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
 		"@vitejs/plugin-react-swc": "^3.5.0",
+		"autoprefixer": "^10.4.17",
 		"eslint": "^9.13.0",
 		"eslint-plugin-react-hooks": "^5.0.0",
 		"eslint-plugin-react-refresh": "^0.4.14",
 		"globals": "^15.11.0",
+		"postcss": "^8.4.35",
 		"prettier": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.8",
+		"tailwindcss": "^3.4.1",
 		"typescript": "~5.6.2",
 		"typescript-eslint": "^8.11.0",
 		"vite": "^5.4.10"
