tried to implement AI quiz generation also fixed some design

--- a/backend/API/appsettings.Development.json
+++ b/backend/API/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "OpenAI": {
+    "BaseUrl": "http://localhost:11434/v1",
+    "DefaultModel": "llama3:8b",
+    "TestMode": false
   }
 }
