--- a/backend/API/appsettings.json
+++ b/backend/API/appsettings.json
@@ -5,5 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PostgreSQL": "Host=postgres;Port=5432;Database=postgres;Username=postgres;Password=postgres;"
+  },
+  "Jwt": {
+    "Key": "CHANGE_THIS_TO_YOUR_SECRET_KEY",
+    "Issuer": "http://localhost:5153",
+    "Audience": "http://localhost:5153"
+  },
+  "OpenAI": {
+    "BaseUrl": "http://localhost:11434/v1",
+    "DefaultModel": "llama3:8b",
+    "TestMode": false
+  }
 }
