--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
 		"@types/react-dom": "^18.3.1",
 		"@vitejs/plugin-react-swc": "^3.5.0",
 		"autoprefixer": "^10.4.17",
+		"cypress": "^14.3.2",
 		"eslint": "^9.13.0",
 		"eslint-plugin-react-hooks": "^5.0.0",
 		"eslint-plugin-react-refresh": "^0.4.14",
