--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,12 @@
 		"@mantine/form": "^7.17.3",
 		"@mantine/hooks": "^7.17.3",
 		"@tabler/icons-react": "^3.31.0",
+		"@types/canvas-confetti": "^1.9.0",
 		"@types/react-beautiful-dnd": "^13.1.8",
 		"axios": "^1.8.4",
+		"canvas-confetti": "^1.9.3",
 		"formik": "^2.4.6",
-		"framer-motion": "^12.9.2",
+		"framer-motion": "^12.10.0",
 		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.503.0",
 		"react": "^18.3.1",
